# sekoia-automation-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  publish.yml  test_results.yml
sekoia_automation/: __init__.py  account_validator.py  action.py  checkpoint.py  cli.py  config.py  connector.py  constants.py  exceptions.py  module.py  storage.py  timer.py  trigger.py  typing.py  utils.py
sekoia_automation/aio/: __init__.py  connector.py
sekoia_automation/aio/helpers/: __init__.py
sekoia_automation/aio/helpers/aws/: __init__.py  client.py
sekoia_automation/aio/helpers/files/: __init__.py  csv.py  utils.py
sekoia_automation/aio/helpers/http/: __init__.py  http_client.py  token_refresher.py  utils.py
sekoia_automation/asset_connector/: __init__.py  async_connector.py  connector.py
sekoia_automation/asset_connector/models/: connector.py
sekoia_automation/asset_connector/models/ocsf/: base.py  device.py  group.py  organization.py  risk_level.py  software.py  user.py  vulnerability.py
sekoia_automation/configuration/: __init__.py  base.py  filesystem.py  fission.py  utils.py
sekoia_automation/connector/: __init__.py  event_aggregator.py  metrics.py  workers.py
sekoia_automation/helpers/: timestepper.py
sekoia_automation/helpers/aio/aws/: __init__.py  client.py
sekoia_automation/helpers/aio/files/: __init__.py  csv.py
sekoia_automation/helpers/aio/http/: http_client.py  token_refresher.py  utils.py
sekoia_automation/helpers/loguru/: config.py
sekoia_automation/http/: http_client.py  rate_limiter.py  retry.py
sekoia_automation/http/aio/: http_client.py  token_refresher.py
sekoia_automation/http/sync/: http_client.py
sekoia_automation/loguru/: __init__.py  config.py
sekoia_automation/metrics/: __init__.py  base.py  prometheus.py
sekoia_automation/scripts/: action_runner.py  check_compliance.py  files_generator.py  openapi.py  sync_library.py  update_sdk_version.py
sekoia_automation/scripts/compliance/validators/: __init__.py  actions_json.py  base.py  changelog.py  connectors_json.py  deps.py  dockerfile.py  helpers.py  logo.py  main.py  manifest.py  module.py  tests.py  triggers_json.py
sekoia_automation/scripts/documentation/: generate.py
sekoia_automation/scripts/documentation/templates/: module.md
sekoia_automation/scripts/new_module/template/: cookiecutter.json
sekoia_automation/scripts/new_module/template/hooks/: post_gen_project.sh
sekoia_automation/scripts/new_module/template/{{cookiecutter.module_dir}}/: Dockerfile  main.py  manifest.json  pyproject.toml
sekoia_automation/scripts/new_module/template/{{cookiecutter.module_dir}}/{{cookiecutter.module_name.lower().replace(" ", "_")}}_modules/: __init__.py  models.py
sekoia_automation/utils/: __init__.py  validation.py
tests/: conftest.py  test_account_validator.py  test_action.py  test_checkpoint.py  test_cli.py  test_config.py  test_connector.py  test_files_generator.py  test_module.py  test_storage.py  test_timer.py  test_trigger.py  utils.py
tests/aio/: __init__.py  test_connector.py
tests/aio/helpers/: __init__.py  test_aws.py  test_file_utils.py
tests/aio/helpers/http/: __init__.py  test_http_client_session.py  test_http_token_refresher.py  test_http_utils.py
tests/asset_connector/: test_async_connector.py  test_connector.py  test_software_model.py
tests/configuration/: test_configuration.py  test_filesystem.py  test_fission.py
tests/connectors/: test_connector.py  test_event_aggregator.py  test_workers.py
tests/data/: openapi.yml  swagger.json
tests/data/documentation/: mkdocs.yml
tests/data/sample_module/: CHANGELOG.md  action_request.json  connector_test.json  fetched_connector_test.json  main.py  manifest.json  sample.py  trigger_sekoiaio_alert_created.json  trigger_test.json
tests/expectations/sample_module/: action_sample_action.json  connector_sample_connector.json  main.py  manifest.json  trigger_sample_trigger.json
tests/helpers/: test_timestepper.py
tests/helpers/aio/: __init__.py  test_aws.py  test_file_utils.py
tests/helpers/aio/http/: __init__.py  test_http_client_session.py  test_http_token_refresher.py  test_http_utils.py
tests/helpers/loguru/: __init__.py  test_loguru_config.py  test_loguru_formatters.py  test_loguru_handler.py
tests/http/: conftest.py  test_rate_limiter.py  test_retry.py
tests/http/aio/: test_http_client.py  test_http_token_refresher.py
tests/http/aio/examples/: test_bearer_token_auth_client.py  test_oauth_token_auth_client.py
tests/http/sync/: test_http_client.py
tests/http/sync/examples/: test_bearer_token_auth_client.py  test_oauth_token_auth_client.py
tests/loguru/: __init__.py  test_loguru_config.py  test_loguru_formatters.py  test_loguru_handler.py
tests/metrics/: test_prometheus_exporter.py
tests/scripts/: test_compliance_check.py  test_files_generator.py  test_sync_library.py
