[project]
name = "sekoia-automation-sdk"
version = "1.22.0"
description = "SDK to create Sekoia.io playbook modules"
authors = [{ name = "Sekoia.io" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "SDK",
    "Sekoia.io",
    "automation",
    "playbook",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.25,<3",
    "requests-ratelimiter>=0.7.0,<0.8",
    "sentry-sdk",
    "tenacity",
    "s3path>=0.6.4,<0.7",
    "orjson>=3.8,<4",
    "pydantic>=2.10,<3",
    "typer[all]>=0.17.3,<0.18",
    "cookiecutter>=2.1,<3",
    "python-slugify>=5.0.2,<6",
    "PyYAML>=6.0,<7",
    "Jinja2>=3.0.3,<4",
    "black>=25.11.0", # To format files in cli tools
    "poetry",         # To lock requirements when creating new module
    "prometheus-client>=0.21.0,<0.22",
    "aiohttp>=3.8.4,<4",
    "jsonschema>=4.22.0,<5",
    "flask>=3.1.2,<4",
    "cachetools>=6.2.3",
]

[project.optional-dependencies]
all = [
    "aiolimiter>=1.1.0,<2",
    "aiobotocore>=2.20.0,<3",
    "boto3>=1.36.23,<2",
    "aiofiles>=23.1.0,<24",
    "aiocsv>=1.2.4,<2",
    "loguru>=0.7.0,<0.8",
]
async-aws = [
    "aiobotocore>=2.20.0,<3",
    "boto3>=1.36.23,<2",
]
async-http = [
    "aiolimiter>=1.1.0,<2",
    "aiofiles>=23.1.0,<24",
]
async-files = [
    "aiofiles>=23.1.0,<24",
    "aiocsv>=1.2.4,<2",
]
logging = ["loguru>=0.7.0,<0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://sekoia.io/"
Repository = "https://github.com/SEKOIA-IO/sekoia-automation-sdk"
Documentation = "https://docs.sekoia.io/"

[project.scripts]
sekoia-automation = "sekoia_automation.cli:app"

[dependency-groups]
dev = [
    "unittest-xml-reporting>=3,<4",
    "pylint",
    "pytest>=8.3.3,<9",
    "pytest-cov",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-xdist",
    "pytest-env>=1.1.5,<2",
    "requests-mock>=1.9,<2",
    "faker>=30.0.0,<31",
    "aioresponses @ git+https://github.com/pnuckowski/aioresponses.git@444aa498cd2f625edd7923355fa373972d5fcf44",
    "pre-commit>=3.3.3,<4",
    "requests-oauthlib>=2.0.0,<3",
]
lint = [
    "ruff>=0.6.8,<0.7.0",
    "mypy",
    "pip>=25.3",
]

[tool.uv]
default-groups = [
    "dev",
    "lint",
]

[tool.hatch.build.targets.sdist]
include = ["sekoia_automation"]

[tool.hatch.build.targets.wheel]
include = ["sekoia_automation"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = '''
    --asyncio-mode=auto
    --cache-clear
    --cov=sekoia_automation
    --cov-report=html
    --cov-report=term-missing:skip-covered
    --cov-fail-under=90
    -ra
'''
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
fix = true
exclude = [
    "tests/expectations/sample_module/main.py",
    "tests/aio/",
    "sekoia_automation/scripts/new_module/template/"
]

[tool.ruff.lint]
select = ["A", "ARG", "E", "F", "I", "N", "RUF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Ignore unusued args because of pytest fixtures

[tool.mypy]
python_version = "3.11"
install_types = true
non_interactive = true
ignore_missing_imports = true
show_column_numbers = true
exclude = [
    "sekoia_automation/scripts/new_module/template/",
    "tests/"
]
disable_error_code = "annotation-unchecked"
packages = ["sekoia_automation"]
