[project]
name = "{{cookiecutter.module_name.capitalize()}}-automation-module"
version = "0.0"
description = ""
authors = []
requires-python=">=3.11,<3.15"

dependencies = [
    "sekoia-automation-sdk"
]

[project.dependency-group.dev]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = '''
  --strict-markers
  --tb=short
  --cov={{cookiecutter.module_name.lower().replace(" ", "_")}}_modules
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --capture=sys
'''
